Mac: Disable visual effects when fullscreen

These effects result in substantially higher power consumption.

Make the change in didEnter/willExit (as opposed to adjustUIForExiting/
ExitingFullscreen) because we want the effect to go away only while the
window is fullscreen (not during the transition).

BUG=620433

Review-Url: https://codereview.chromium.org/2071973002
Cr-Commit-Position: refs/heads/master@{#400308}

Former-commit-id: 208098685cf35d3bb995cb365d204f0a65381ad3